Fixed Dependencies, added new DataClass SharedModels

--- a/2. vjezba/Messenger (Zadatak 5)/CommonLib/CommonLib.csproj
+++ b/2. vjezba/Messenger (Zadatak 5)/CommonLib/CommonLib.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MessagingSystem\MessagingSystem.csproj" />
-    <ProjectReference Include="..\SharedModels\SharedModels.csproj" />
+    <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
   </ItemGroup>
 
 </Project>
