--- a/2. vjezba/BudzetLibrary/BudzetLibrary.csproj
+++ b/2. vjezba/BudzetLibrary/BudzetLibrary.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Prostor.cs" />
+    <Compile Include="StambenaZona.cs" />
     <Compile Include="Zona.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
