--- a/2. vjezba/BudzetLibrary/BudzetLibrary.csproj
+++ b/2. vjezba/BudzetLibrary/BudzetLibrary.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NestambenaZona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Prostor.cs" />
     <Compile Include="StambenaZona.cs" />
