Implement class Zgrada logic for creating buildings

--- a/2. vjezba/BudzetLibrary/BudzetLibrary.csproj
+++ b/2. vjezba/BudzetLibrary/BudzetLibrary.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Prostor.cs" />
     <Compile Include="StambenaZona.cs" />
+    <Compile Include="Zgrada.cs" />
     <Compile Include="Zona.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
