--- a/2. vjezba/Komunikacijski Kanali (Zadatak 6)/ClassLibrary1/MessengerLib.csproj
+++ b/2. vjezba/Komunikacijski Kanali (Zadatak 6)/ClassLibrary1/MessengerLib.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="IKanal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Email.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataLayer\DataLayer.csproj">
