Implement class SMS for sending SMS messages through GUI

--- a/2. vjezba/Komunikacijski Kanali (Zadatak 6)/ClassLibrary1/MessengerLib.csproj
+++ b/2. vjezba/Komunikacijski Kanali (Zadatak 6)/ClassLibrary1/MessengerLib.csproj
@@ -45,6 +45,7 @@
     <Compile Include="IKanal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Email.cs" />
+    <Compile Include="SMS.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataLayer\DataLayer.csproj">
