--- a/2. vjezba/Komunikacijski Kanali (Zadatak 6)/ClassLibrary1/MessengerLib.csproj
+++ b/2. vjezba/Komunikacijski Kanali (Zadatak 6)/ClassLibrary1/MessengerLib.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="IKanal.cs" />
+    <Compile Include="Messenger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Email.cs" />
     <Compile Include="SMS.cs" />
