--- a/3. vjezba/LINQ_tutorial/DataAccessLayer/DataAccessLayer.csproj
+++ b/3. vjezba/LINQ_tutorial/DataAccessLayer/DataAccessLayer.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="NorthwndModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
