--- a/3. vjezba/LINQ_tutorial/DataAccessLayer/DataAccessLayer.csproj
+++ b/3. vjezba/LINQ_tutorial/DataAccessLayer/DataAccessLayer.csproj
@@ -52,8 +52,10 @@
   <ItemGroup>
     <Compile Include="NorthwndModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="Repositories\SupplierRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
