--- a/3. vjezba/LINQ_tutorial/NorthWnd_LINQ/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/3. vjezba/LINQ_tutorial/NorthWnd_LINQ/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoryServices.cs" />
     <Compile Include="ProductServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
