--- a/3. vjezba/LINQ_tutorial/NorthWnd_LINQ/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/3. vjezba/LINQ_tutorial/NorthWnd_LINQ/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CategoryServices.cs" />
     <Compile Include="ProductServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SupplierServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\DataAccessLayer\DataAccessLayer.csproj">
