--- a/3. vjezba/Zadatak3_1/App.config
+++ b/3. vjezba/Zadatak3_1/App.config
@@ -12,4 +12,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="Model1" connectionString="data source=31.147.206.65;initial catalog=Northwind;user id=student;password=student;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
