Finished DataAccessLayer logic implementation

--- a/3. vjezba/Zadatak3_2/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/3. vjezba/Zadatak3_2/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -43,5 +43,15 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj">
+      <Project>{782ff6b4-b759-4588-affa-1e6832d38369}</Project>
+      <Name>DataAccessLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EntitiesLayer\EntitiesLayer.csproj">
+      <Project>{66a7597f-d6d3-4181-8c8e-e58a3dd069ea}</Project>
+      <Name>EntitiesLayer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
