--- a/3. vjezba/Zadatak3_4/Zadatak3_4/PresentationLayer/PresentationLayer.csproj
+++ b/3. vjezba/Zadatak3_4/Zadatak3_4/PresentationLayer/PresentationLayer.csproj
@@ -8,4 +8,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessLogicLayer\BusinessLogicLayer.csproj" />
+    <ProjectReference Include="..\EntitiesLayer\EntitiesLayer.csproj" />
+  </ItemGroup>
+
 </Project>
