--- a/3. vjezba/Zadatak3_G1/Zadatak3_G1/DataAccessLayer/DataAccessLayer.csproj
+++ b/3. vjezba/Zadatak3_G1/Zadatak3_G1/DataAccessLayer/DataAccessLayer.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProductRepository.cs" />
     <Compile Include="NorthwindModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
