--- a/3. vjezba/Zadatak3_G3/Zadatak3_G3/DataAccessLayer/DataAccessLayer.csproj
+++ b/3. vjezba/Zadatak3_G3/Zadatak3_G3/DataAccessLayer/DataAccessLayer.csproj
@@ -52,7 +52,7 @@
   <ItemGroup>
     <Compile Include="NorthwindModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Supplier.cs" />
+    <Compile Include="Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EntitiesLayer\EntitiesLayer.csproj">
