--- a/3. vjezba/Zadatak3_G3/Zadatak3_G3/DataAccessLayer/DataAccessLayer.csproj
+++ b/3. vjezba/Zadatak3_G3/Zadatak3_G3/DataAccessLayer/DataAccessLayer.csproj
@@ -53,6 +53,7 @@
     <Compile Include="NorthwindModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
+    <Compile Include="SupplierRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EntitiesLayer\EntitiesLayer.csproj">
