Create class Repository for DataAccessLayer

--- a/3. vjezba/Zadatak3_1/Zadatak3_1/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/3. vjezba/Zadatak3_1/Zadatak3_1/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -43,5 +43,15 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccesLayer\DataAccessLayer.csproj">
+      <Project>{81437471-a504-4d73-9afd-10d45d1a4b7e}</Project>
+      <Name>DataAccessLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EntitiesLayer\EntitiesLayer.csproj">
+      <Project>{ad0e7926-af8a-4c40-98c7-3f37fab7e563}</Project>
+      <Name>EntitiesLayer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
