--- a/3. vjezba/Zadatak3_1/Zadatak3_1/DataAccesLayer/DataAccessLayer.csproj
+++ b/3. vjezba/Zadatak3_1/Zadatak3_1/DataAccesLayer/DataAccessLayer.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerRepository_inherited.cs" />
     <Compile Include="Model1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
