--- a/3. vjezba/Zadatak3_1/Zadatak3_1/DataAccesLayer/DataAccessLayer.csproj
+++ b/3. vjezba/Zadatak3_1/Zadatak3_1/DataAccesLayer/DataAccessLayer.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomerRepository_inherited.cs" />
+    <Compile Include="CustomerRepository_solo.cs" />
     <Compile Include="Model1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
