--- a/4. vjezba/vj4_zadatak1/vj4_zadatak1/vj4_zadatak1.csproj
+++ b/4. vjezba/vj4_zadatak1/vj4_zadatak1/vj4_zadatak1.csproj
@@ -109,6 +109,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="{5F3B1E84-A4C9-4D96-881B-9BB406D892BA}.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
