Design MainWindow and NewCustomer xaml for adding customers

--- a/4. vjezba/vj4_zadatak1/vj4_zadatak1/App.config
+++ b/4. vjezba/vj4_zadatak1/vj4_zadatak1/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="NorthwndModel" connectionString="data source=31.147.206.65;initial catalog=Northwind;user id=student;password=student;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=31.147.206.65;initial catalog=Northwind;user id=student;password=student;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
