Design GUI for details window that will load info about selected supplier

--- a/4. vjezba/vj4_zadatak7/vj4_zadatak7/vj4_zadatak7.csproj
+++ b/4. vjezba/vj4_zadatak7/vj4_zadatak7/vj4_zadatak7.csproj
@@ -68,6 +68,9 @@
       <DependentUpon>ShowSuppliers.xaml</DependentUpon>
     </Compile>
     <Compile Include="Supplier.cs" />
+    <Compile Include="SupplierDetails.xaml.cs">
+      <DependentUpon>SupplierDetails.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -81,6 +84,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="ShowSuppliers.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SupplierDetails.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
