--- a/4. vjezba/vj4_zadatak5/vj4_zadatak5/vj4_zadatak5.csproj
+++ b/4. vjezba/vj4_zadatak5/vj4_zadatak5/vj4_zadatak5.csproj
@@ -64,6 +64,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ShowProducts.xaml.cs">
+      <DependentUpon>ShowProducts.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Supplier.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -78,6 +81,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ShowProducts.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NorthwndModel.cs" />
