Fix Exception message constructor errors and add ExchangeRateException

--- a/5. vjezba/Zadatak_1/BusinessLayer/BusinessLayer.csproj
+++ b/5. vjezba/Zadatak_1/BusinessLayer/BusinessLayer.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Exceptions\AccountException.cs" />
     <Compile Include="Exceptions\ClientException.cs" />
     <Compile Include="Exceptions\CurrencyException.cs" />
+    <Compile Include="Exceptions\ExchangeRateException.cs" />
     <Compile Include="Exceptions\TransactionException.cs" />
     <Compile Include="IbanGenerator.cs" />
     <Compile Include="CurrencyService.cs" />
